--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="menu-container__cards">
             <template class="submenu">
                 <div class="card">
+                    <img class="card__img" src="./imagenes/Aperitivos.jpg" alt="">
                     <p class="card-h4">Bebidas</p>
                     <a id="link" class="a" href=""><img class="triangulo" src="./imagenes/triangle.png" alt=""></a>
                     <a class="full" href=""></a>
