--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <div class="card">
                     <img class="card__img" src="./imagenes/Aperitivos.jpg" alt="">
                     <p class="card-h4">Bebidas</p>
+                    <p class="card__descripcion"></p>
                     <a id="link" class="a" href=""><img class="triangulo" src="./imagenes/triangle.png" alt=""></a>
                     <a class="full" href=""></a>
                 </div>
