--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p class="card-h4">Bebidas</p>
                     <p class="card__descripcion"></p>
                     <a id="link" class="a" href=""><img class="triangulo" src="./imagenes/triangle.png" alt=""></a>
-                    <a class="full" href=""></a>
+                    <a class="card__link-full" href="">Ver menú</a>
                 </div>
             </template>
                 
