agregando mas paginas

--- a/aperitivos.html
+++ b/aperitivos.html
@@ -9,13 +9,17 @@
     <script defer src="./nav-comp/nav-comp.js"></script>
     <link rel="stylesheet" href="./footer-comp/footer.css">
     <script defer src="./footer-comp/footer.js"></script>
+    <link rel="stylesheet" href="./ubicacion-comp/ubicacion.css">
+    <script defer src="./ubicacion-comp/ubicacion.js"></script>
     <link rel="stylesheet" href="./aperitivos.css">
     <script defer src="./aperitivos.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="contenedor"></div>
+         <section id="ubicacion-display" class="ubicacion"> </section>
         <div class="footer-cont"></div>
+       
 
     </div>
 
