--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.7/glider.css" integrity="sha512-xcz2kgNDovRs9/wYWii2XSBEDlpaTq99iewiGN3PR/pNnPaSDiw6wHpXU0kFyonevdVj/MkeesxMII8sgolFCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.7/glider.min.js" integrity="sha512-tHimK/KZS+o34ZpPNOvb/bTHZb6ocWFXCtdGqAlWYUcz+BGHbNbHMKvEHUyFxgJhQcEO87yg5YqaJvyQgAEEtA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="./nav-comp/nav.css">
-    <script defer src="./nav-comp/nav-comp.js"></script>
+    <script async src="./nav-comp/nav-comp.js"></script>
+    <link rel="stylesheet" href="./ubicacion-comp/ubicacion.css">
+    <script async src="./ubicacion-comp/ubicacion.js"></script>
     <link rel="stylesheet" href="./footer-comp/footer.css">
-    <script defer src="./footer-comp/footer.js"></script>
+    <script async src="./footer-comp/footer.js"></script>
     <link rel="stylesheet" href="./carousel-comp/carousel.css">
-    <script defer src="./carousel-comp/carousel.js"></script>
+    <script async src="./carousel-comp/carousel.js"></script>
     <link rel="stylesheet" href="./index.css">
-    <script defer src="./index.js"></script>
+    <script async src="./index.js"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,10 +57,7 @@
 
         </section>
 
-        <section id="ubicacion-display" class="ubicacion">
-            <h2 class="ubicacion-h2">Encontranos acá</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3198.0440296498255!2d-56.68248938471233!3d-36.72150377996489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959c6f6408e6ad2b%3A0xf46101992fbb0355!2sEl%20Faro%20Cafeter%C3%ADa!5e0!3m2!1ses!2sar!4v1626571985561!5m2!1ses!2sar" width="94%" height="75%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </section>
+        <section id="ubicacion-display" class="ubicacion"> </section>
         
         <div class="footer-cont"></div>
         
