arreglando el menu mobile

--- a/aperitivos.html
+++ b/aperitivos.html
@@ -30,21 +30,23 @@
                     <h2 class="menu__aperitivos-sub--titulo">Creps</h2>
                     <div class="card">
                         <img class="card__img" src="./imagenes/Aperitivos.jpg" alt="">
-                        <p class="card-h4">Bebidas</p>
-                        <p class="card__descripcion"></p>
+                        <p class="card-h4">Crepe banana split </p>
+                        <p class="card__descripcion">Crepe de dulce de leche con banana (o solo) </p>
+                        <p class="card__precio"> <span class="card__precio-span">$</span> 380</p>
                         <a class="card__link-full" href="">Ver menú</a>
                     </div>
                         <div class="card">
                             <img class="card__img" src="./imagenes/Aperitivos.jpg" alt="">
-                            <p class="card-h4">Bebidas</p>
-                            <p class="card__descripcion"></p>
+                            <p class="card-h4">crepe Strawberry</p>
+                            <p class="card__descripcion">Crepe de dulce de leche con frutilla (o solo)</p>
+                            <p class="card__precio"> <span class="card__precio-span">$</span> 450</p>
                             <a class="card__link-full" href="">Ver menú</a>
                         </div>
 
                         <div class="card">
                             <img class="card__img" src="./imagenes/Aperitivos.jpg" alt="">
                             <p class="card-h4">Bebidas</p>
-                            <p class="card__descripcion"></p>
+                           
                             <a class="card__link-full" href="">Ver menú</a>
                         </div>
 
