arreglos del menu

--- a/aperitivos.html
+++ b/aperitivos.html
@@ -31,16 +31,16 @@
                     <div class="card">
                         <img class="card__img" src="./imagenes/Aperitivos.jpg" alt="">
                         <p class="card-h4">Crepe banana split </p>
-                        <a class="card__link-full" href="">Descripcion</a>
-                        <p class="card__descripcion">Crepe de dulce de leche con banana (o solo) </p>
+                        <a  class="card__link-full" href="#Crepe banana split">Descripcion</a>
+                        <p id="Crepe banana split" class="card__descripcion">Crepe de dulce de leche con banana (o solo) </p>
                         <p class="card__precio"> <span class="card__precio-span">$</span> 380</p>
                         
                     </div>
                         <div class="card">
                             <img class="card__img" src="./imagenes/Aperitivos.jpg" alt="">
-                            <p class="card-h4">crepe Strawberry</p>
-                            <a class="card__link-full" href="">Descripcion</a>
-                            <p class="card__descripcion">Crepe de dulce de leche con frutilla (o solo)</p>
+                            <p class="card-h4">Crepe Strawberry</p>
+                            <a class="card__link-full" href="#Crepe Strawberry">Descripcion</a>
+                            <p id="Crepe Strawberry" class="card__descripcion">Crepe de dulce de leche con frutilla (o solo)</p>
                             <p class="card__precio"> <span class="card__precio-span">$</span> 450</p>
                             
                         </div>
