--- a/aperitivos.html
+++ b/aperitivos.html
@@ -34,7 +34,7 @@
                                 <p class="card-h4">Crepe banana split </p>
                                 <a  class="card__link-full" href="#Crepe banana split">Descripcion</a>
                                 <p id="Crepe banana split" class="card__descripcion">Crepe de dulce de leche con banana (o solo) </p>
-                                <p class="card__precio"> <span class="card__precio-span">$</span> 380</p>
+                                <p class="card__precio"> $380</p>
                             </div>
                         </div> 
                 </template>
