sub menus cambios

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El faro</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.7/glider.css" integrity="sha512-xcz2kgNDovRs9/wYWii2XSBEDlpaTq99iewiGN3PR/pNnPaSDiw6wHpXU0kFyonevdVj/MkeesxMII8sgolFCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.7/glider.min.js" integrity="sha512-tHimK/KZS+o34ZpPNOvb/bTHZb6ocWFXCtdGqAlWYUcz+BGHbNbHMKvEHUyFxgJhQcEO87yg5YqaJvyQgAEEtA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.7/glider.min.js" integrity="sha512-tHimK/KZS+o34ZpPNOvb/bTHZb6ocWFXCtdGqAlWYUcz+BGHbNbHMKvEHUyFxgJhQcEO87yg5YqaJvyQgAEEtA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="./nav-comp/nav.css">
-    <script async src="./nav-comp/nav-comp.js"></script>
+    <script defer src="./nav-comp/nav-comp.js"></script>
     <link rel="stylesheet" href="./ubicacion-comp/ubicacion.css">
-    <script async src="./ubicacion-comp/ubicacion.js"></script>
+    <script defer src="./ubicacion-comp/ubicacion.js"></script>
     <link rel="stylesheet" href="./footer-comp/footer.css">
-    <script async src="./footer-comp/footer.js"></script>
+    <script defer src="./footer-comp/footer.js"></script>
     <link rel="stylesheet" href="./carousel-comp/carousel.css">
-    <script async src="./carousel-comp/carousel.js"></script>
+    <script defer src="./carousel-comp/carousel.js"></script>
     <link rel="stylesheet" href="./index.css">
-    <script async src="./index.js"></script>
+    <script defer src="./index.js"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
