--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
              <div class="menu__bebidas">
                 <template class="template-2">
                      <div class="menu__bebidas-sub">
-                        <img class="menu__img" src="" alt="comida">
+                        <img class="menu__img" src="" alt="bebida">
                         <p class="menu__numero"></p>
-                       <h2 class="menu__aperitivos-sub-titulo"></h2>
+                       <h2 class="menu__bebidas-sub-titulo"></h2>
                         <p class="menu__descripcion"></p>
                      </div> 
                  </template>
@@ -63,17 +63,17 @@
                      <div class="menu__principales-sub">
                         <img class="menu__img" src="" alt="comida">
                         <p class="menu__numero"></p>
-                       <h2 class="menu__aperitivos-sub-titulo"></h2>
+                       <h2 class="menu__principales-sub-titulo"></h2>
                         <p class="menu__descripcion"></p>
                      </div> 
                  </template>
              </div>
              <div class="menu__postres">
                 <template class="template-4">
-                     <div class="menu__principales-sub">
+                     <div class="menu__postres-sub">
                         <img class="menu__img" src="" alt="comida">
                         <p class="menu__numero"></p>
-                       <h2 class="menu__aperitivos-sub-titulo"></h2>
+                       <h2 class="menu__postres-sub-titulo"></h2>
                         <p class="menu__descripcion"></p>
                      </div> 
                  </template>
