sub menu alturas

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                      </div> 
                  </template>
              </div>
+             <div class="menu__fake"></div>
                 <a class="menu__link" href="./aperitivos.html">Ver menú completo</a>
         </div>
             
