--- a/index.html
+++ b/index.html
@@ -41,40 +41,40 @@
             <div class="menu__aperitivos">
                 <template class="template">
                      <div class="menu__aperitivos-sub">
-                         <img class="menu__img" src="" alt="comida">
-                         <p class="menu__numero"></p>
+                         <img class="menu__img-aperitivos" src="" alt="comida">
+                         <p class="menu__numero-aperitivos"></p>
                         <h2 class="menu__aperitivos-sub-titulo"></h2>
-                         <p class="menu__descripcion"></p>
+                         <p class="menu__descripcion-aperitivos"></p>
                      </div> 
                  </template>
              </div>  
              <div class="menu__bebidas">
                 <template class="template-2">
                      <div class="menu__bebidas-sub">
-                        <img class="menu__img" src="" alt="bebida">
-                        <p class="menu__numero"></p>
+                        <img class="menu__img-bebidas" src="" alt="bebida">
+                        <p class="menu__numero-bebidas"></p>
                        <h2 class="menu__bebidas-sub-titulo"></h2>
-                        <p class="menu__descripcion"></p>
+                        <p class="menu__descripcion-bebidas"></p>
                      </div> 
                  </template>
              </div>
              <div class="menu__principales">
                 <template class="template-3">
                      <div class="menu__principales-sub">
-                        <img class="menu__img" src="" alt="comida">
-                        <p class="menu__numero"></p>
+                        <img class="menu__img-principales" src="" alt="comida">
+                        <p class="menu__numero-principales"></p>
                        <h2 class="menu__principales-sub-titulo"></h2>
-                        <p class="menu__descripcion"></p>
+                        <p class="menu__descripcion-principales"></p>
                      </div> 
                  </template>
              </div>
              <div class="menu__postres">
                 <template class="template-4">
                      <div class="menu__postres-sub">
-                        <img class="menu__img" src="" alt="comida">
-                        <p class="menu__numero"></p>
+                        <img class="menu__img-postres" src="" alt="comida">
+                        <p class="menu__numero-postres"></p>
                        <h2 class="menu__postres-sub-titulo"></h2>
-                        <p class="menu__descripcion"></p>
+                        <p class="menu__descripcion-postres"></p>
                      </div> 
                  </template>
              </div>
